<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:title="@string/pref_zipcode_title"
        android:key="@string/pref_zipcode_key"
        android:defaultValue="@string/pref_zipcode_default"
        android:inputType="number"
        android:maxLines="1"
        android:maxLength="5"
        android:selectAllOnFocus="true"
        android:singleLine="true" />
    <ListPreference
        android:title="@string/pref_unit_type_title"
        android:key="@string/pref_unit_type_key"
        android:defaultValue="@string/pref_unit_type_default"
        android:entries="@array/pref_unit_type_titles"
        android:entryValues="@array/pref_unit_type_values"/>

    <CheckBoxPreference
        android:title="@string/pref_enable_notifications_label"
        android:key="@string/pref_enable_notifications_key"
        android:summaryOff="@string/pref_enable_notifications_false"
        android:summaryOn="@string/pref_enable_notifications_true"
        android:defaultValue="@string/pref_enable_notifications_default" />
</PreferenceScreen>